<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.industrialtsi.mylyn</groupId>
	<artifactId>com.industrialtsi.mylyn.maven</artifactId>
	<version>0.9.10-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>com.industrialtsi.mylyn.maven</name>
	<description>Maven Build project for Industrial SQL Connector</description>
	<properties>
		<tycho-version>0.19.0</tycho-version>
		<tycho-extras.version>0.19.0</tycho-extras.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<industrial-version>0.9.10</industrial-version>
		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
		<sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
		<sonar.jacoco.reportPath>${project.build.directory}/../../com.industrialtsi.mylyn.tests/target/jacoco.exec</sonar.jacoco.reportPath>
	</properties>
	<repositories>
		<repository>
			<id>kepler</id>
			<layout>p2</layout>
			<url>http://download.eclipse.org/releases/kepler/</url>
		</repository>
		<repository>
			<id>mylyn-releases</id>
			<layout>p2</layout>
			<url>http://download.eclipse.org/mylyn/releases/latest/</url>
		</repository>
		<repository>
			<id>eclipselink-releases</id>
			<layout>p2</layout>
			<url>http://download.eclipse.org/rt/eclipselink/updates/</url>
		</repository>
	</repositories>
	<profiles>
		<profile>
			<id>macosx</id>
			<activation>
				<os>
					<family>mac</family>
				</os>
			</activation>
			<properties>
				<ui.test.vmargs>-Xmx512m -XX:MaxPermSize=256m -XstartOnFirstThread</ui.test.vmargs>
			</properties>
		</profile>
		<profile>
			<id>other-os</id>
			<activation>
				<os>
					<family>!mac</family>
				</os>
			</activation>
			<properties>
				<ui.test.vmargs>-Xmx512m -XX:MaxPermSize=256m</ui.test.vmargs>
			</properties>
		</profile>
	</profiles>
	<modules>
		<!-- <module>com.industrialtsi.mylyn.twitter</module> -->
		<module>../com.industrialtsi.mylyn.demo.memory</module>
		<module>../com.industrialtsi.mylyn.feature</module>
		<module>../com.industrialtsi.mylyn.demo.derby</module>
		<module>../com.industrialtsi.mylyn.demo.derby.feature</module>
		<module>../com.industrialtsi.mylyn.core</module>
		<module>../com.industrialtsi.mylyn.ui</module>
		<module>../com.industrialtsi.mylyn.demo.jpa</module>
		<module>../com.industrialtsi.mylyn.demo.jpa.feature</module>
		<module>../org.apache.ibatis</module>
		<module>../org.apache.ibatis.feature</module>
		<module>../com.industrialtsi.mylyn.site</module>
		<module>../com.industrialtsi.mylyn.tests</module>
	</modules>
	<build>
		<sourceDirectory>src</sourceDirectory>
		<outputDirectory>target/classes</outputDirectory>
		<testSourceDirectory>src</testSourceDirectory>
		<testOutputDirectory>target/test-classes</testOutputDirectory>
		<plugins>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-surefire-plugin</artifactId>
				<version>${tycho-version}</version>
				<configuration>
 					<argLine>${ui.test.vmargs} ${tycho.testArgLine}</argLine>
					<useUIHarness>true</useUIHarness>
					<useUIThread>true</useUIThread>
					<product>org.eclipse.platform.ide</product>
					<application>org.eclipse.ui.ide.workbench</application>
					<dependencies>
						<dependency>
							<type>eclipse-plugin</type>
							<artifactId>com.industrialtsi.mylyn.demo.memory</artifactId>
							<version>0.9.10</version>
						</dependency>
						<dependency>
							<type>eclipse-plugin</type>
							<artifactId>com.industrialtsi.mylyn.demo.derby</artifactId>
							<version>0.9.10</version>
						</dependency>
 					</dependencies>
					<includes>
						<include>**/*Test.java</include>
					</includes>
<!--
					<excludes>
 						<exclude>**/IbatisPersistorTest.*</exclude>
						<exclude>**/PersistorsManagerTest.*</exclude>
						<exclude>**/DemoDerbyTest.*</exclude>
						<exclude>**/DerbyIbatisPersistorTest.*</exclude>
						<exclude>**/IbatisCorePluginTest.*</exclude>
						<exclude>**/TaskCreationTest.*</exclude>
 					</excludes>
 -->
					<!-- Kill test JVM if tests take more than 10 minutes (600 seconds)
						to finish -->
					<forkedProcessTimeoutInSeconds>600</forkedProcessTimeoutInSeconds>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho-version}</version>
				<extensions>true</extensions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-packaging-plugin</artifactId>
				<version>${tycho-version}</version>
				<configuration>
					<strictBinIncludes>true</strictBinIncludes>
					<deployableFeature>true</deployableFeature>
					<archiveSite>true</archiveSite>
					<!-- <archive> <addMavenDescriptor>false</addMavenDescriptor> </archive> -->
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-p2-repository-plugin</artifactId>
				<version>${tycho-version}</version>
				<configuration>
					<includeAllDependencies>false</includeAllDependencies>
					<createArtifactRepository>true</createArtifactRepository>
					<compress>true</compress>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-compiler-plugin</artifactId>
				<version>${tycho-version}</version>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
					<dependencies>
						<dependency>
							<type>eclipse-plugin</type>
							<artifactId>com.industrialtsi.mylyn.demo.derby</artifactId>
							<version>0.9.10</version>
						</dependency>
					</dependencies>
				</configuration>
			</plugin>
		<plugin>
			<groupId>org.jacoco</groupId>
			<artifactId>jacoco-maven-plugin</artifactId>
			<version>0.6.4.201312101107</version>
			<executions>
				<execution>
					<id>prepare-integration-tests</id>
					<phase>pre-integration-test</phase>
					<goals>
						<goal>prepare-agent</goal>
					</goals>
					<configuration>
						<include>com.industrialtsi.*</include>
						<include>org.junit.*</include>
						<!-- Where to put jacoco coverage report -->
						<destFile>${sonar.jacoco.reportPath}</destFile>
						<append>true</append>
					</configuration>
				</execution>
			</executions>
		</plugin>
		</plugins>
	</build>
	<!-- <reporting> <plugins> <plugin> <groupId>org.apache.maven.plugins</groupId>
		<artifactId>maven-checkstyle-plugin</artifactId> <version>2.6</version> </plugin>
		</plugins> </reporting> -->

	<scm>
		<url>http://svn.codespot.com/a/eclipselabs.org/industrial-mylyn/trunk/</url>
	</scm>
	<issueManagement>
		<url>http://code.google.com/a/eclipselabs.org/p/industrial-mylyn/issues/list</url>
	</issueManagement>
	<ciManagement>
		<url>http://dev.fold1.com:9090/</url>
		<system>Hudson FOLD Systems</system>
	</ciManagement>
	<dependencies>
		<dependency>
			<groupId>org.powermock</groupId>
			<artifactId>powermock</artifactId>
			<version>1.5.1</version>
			<type>pom</type>
			<scope>test</scope>
		</dependency>
	</dependencies>
</project>